--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --secondary: #8c38ff;
   --dark: #131a26;
   --ligth: #eee;
+  --result: #888;
 }
 
 * {
@@ -12,8 +13,16 @@
   font-family: "Fira Sans", sans-serif;
 }
 
+#text{
+  color: white;
+}
+
 body {
   background-color: var(--ligth);
+  background-image: url(https://cdn.wallpapersafari.com/98/73/KpBbov.jpg);
+  height: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
 .App {
@@ -26,17 +35,19 @@ body {
 }
 
 #text{
-  font-size: 32px;
+  font-size: 40px;
 }
 
-.themes{
-  background-color: #eee;
-}
 .themes button{
+  height: 55px;
+  width: 55px;
   background: linear-gradient(135deg,red 20%,blue 80%);
+  font-size: 16px;
   border-radius: 15px;
-  padding: 20px;
-  margin: 15px;
+  margin: 13px;
+  padding: 10px;
+  text-align: center;
+  justify-content: center;
   box-shadow: 0 0 0 1px black,
   0 0 0 5px silver,
   0 0 0 6px black;
@@ -44,7 +55,7 @@ body {
 .calculator {
   display: block;
   width: 100%;
-  max-width: 300px;
+  max-width: 400px;
   background-color: #fff;
   border-radius: 16px;
   overflow: hidden;
@@ -62,13 +73,14 @@ body {
 
 .display span {
   font-size: 14px;
-  color: #888;
+  color: var(--result);
 }
 
 button {
   appearance: none;
   border: none;
   outline: none;
+  border-radius: 5px;
   color: #fff;
   font-size: 20px;
   padding: 16px;
@@ -88,15 +100,18 @@ button:hover {
   flex: 1 1 0%;
   background-color: var(--primary);
   font-weight: 700;
+  margin: 5px;
 }
 
 .digits {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(60px, auto);
 }
 
 .digits button {
-  flex: 1 1 33.333%;
-  max-width: 33.333%;
+
+  margin: 5px;
+
   background-color: var(--dark);
 }
